--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -4,6 +4,8 @@ server:
 spring:
   datasource:
     driver-class-name: org.postgresql.Driver
-    url: jdbc:postgresql://localhost:5432/application-launcher
+    url: jdbc:postgresql://localhost:5432/application_launcher
     username: user
-    password: user
+    password: password
+  liquibase:
+    change-log: classpath:db/changelog/db.changelog-master.yaml
