--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -2,10 +2,29 @@ server:
   port: 8080
 
 spring:
-  datasource:
-    driver-class-name: org.postgresql.Driver
-    url: jdbc:postgresql://localhost:5432/application_launcher
-    username: user
-    password: password
+#  datasource:
+#    driver-class-name: org.postgresql.Driver
+#    url: jdbc:postgresql://localhost:5432/application_launcher
+#    username: user
+#    password: password
   liquibase:
     change-log: classpath:db/changelog/db.changelog-master.yaml
+    url: jdbc:postgresql://localhost:5432/application_launcher
+    user: ${database.postgres.username}
+    password: ${database.postgres.password}
+  r2dbc:
+    url: r2dbc:pool:postgres://localhost:5432/application_launcher
+    username: ${database.postgres.username}
+    password: ${database.postgres.password}
+
+database:
+  postgres:
+    username: user
+    password: password
+
+jwt:
+  password:
+    encoder:
+      secret: FZK2DZ82odqS13e8aENggaMbb_fAkl-nJL4AEVBX43g
+      iteration: 64
+      keyLength: 256
