--- a/deploy/database/postgres/docker-compose.yml
+++ b/deploy/database/postgres/docker-compose.yml
@@ -6,8 +6,8 @@ services:
     restart: always
     shm_size: 256mb
     environment:
-      POSTGRES_USER: user
-      POSTGRES_PASSWORD: password
-      POSTGRES_DB: application_launcher
+      POSTGRES_USER: ${POSTGRES_USER}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+      POSTGRES_DB: ${POSTGRES_DB}
     ports:
-      - "5432:5432"
+      - "5433:5432"
