Главный коммит по созданию и инициализации структуры проекта application-launcher

--- a/pom.xml
+++ b/pom.xml
@@ -7,10 +7,10 @@
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
         <version>3.2.3</version>
-        <relativePath/> <!-- lookup parent from repository -->
+        <relativePath/>
     </parent>
 
-    <groupId>ru.youngstanis</groupId>
+    <groupId>ru.youngstanis.applicationlauncher</groupId>
     <artifactId>application-launcher</artifactId>
     <version>1.0.0</version>
 
@@ -42,7 +42,6 @@
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
-            <optional>true</optional>
         </dependency>
 
         <dependency>
