--- a/.gitignore
+++ b/.gitignore
@@ -18,6 +18,12 @@ target/
 *.iws
 *.iml
 *.ipr
+.mvn
+/target
+.gitignore
+/backend/.mvn
+/backend/target
+/deploy/database/postgres/.env
 
 ### NetBeans ###
 /nbproject/private/
