--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -11,7 +11,7 @@
     </parent>
 
     <groupId>com.launcher.api</groupId>
-    <artifactId>backend</artifactId>
+    <artifactId>application-launcher</artifactId>
     <version>0.0.1-SNAPSHOT</version>
 
     <name>backend</name>
