--- a/backend/src/main/resources/application.yaml
+++ b/backend/src/main/resources/application.yaml
@@ -19,3 +19,7 @@ jwt:
       secret: FZK2DZ82odqS13e8aENggaMbb_fAkl-nJL4AEVBX43g
       iteration: 64
       keyLength: 256
+
+gateway:
+  cors:
+    allowed-origins: http://localhost:80
